# zennit

./: .gitignore  .gitlab-ci.yml  .python-versions  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pylintrc  pyproject.toml  setup.py  tox.ini
.github/workflows/: benchmark.yml  deploy.yaml  tests.yml
docs/: requirements.txt
docs/source/: bibliography.bib  conf.py  getting-started.rst  index.rst
docs/source/_templates/: modules.rst
docs/source/how-to/: compute-second-order-gradients.rst  get-intermediate-relevance.rst  index.rst  use-attributors.rst  use-composites-and-canonizers.rst  use-rules-composites-and-canonizers.rst  visualize-results.rst  write-custom-attributors.rst  write-custom-canonizers.rst  write-custom-composites.rst  write-custom-compositors.rst  write-custom-rules.rst
docs/source/reference/: index.rst
docs/source/tutorial/: deep-kmeans.ipynb  image-classification-vgg-resnet.ipynb  image-classification-vgg.ipynb  index.rst
example/: feed_forward.py
share/example/: feed_forward.py
share/merge_maps/: vgg16_bn.json
share/scripts/: download-lighthouses.sh  heatmap-benchmark.sh  palette_fit.py  palette_swap.py  show_cmaps.py  subimagenet.sh
src/zennit/: __init__.py  attribution.py  canonizers.py  cmap.py  composites.py  core.py  image.py  layer.py  rules.py  torchvision.py  types.py
tests/: conftest.py  helpers.py  test_attribution.py  test_canonizers.py  test_composites.py  test_core.py  test_image.py  test_rules.py  test_torchvision.py
tests/linters/: .mypy.ini  .pycodestyle  .pydoclint.toml  .pylintrc
tests/unit/: .coveragerc  .pytest.ini  conftest.py  test_cmap.py  test_core.py  test_torchvision.py
zennit/: attribution.py  canonizers.py  categories.py  cmap.py  composites.py  core.py  image.py  layer.py  presets.py  rules.py  special.py  torchvision.py  types.py
